Fix list spacing

--- a/assets/stylesheets/bbcode.scss
+++ b/assets/stylesheets/bbcode.scss
@@ -46,6 +46,10 @@ p {
   }
 }
 
+br + ul {
+  margin-top: 1em;
+}
+
 li > br:first-of-type {
   display: none;
 }
